fix: remove BTCA domain CNAME

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: https://signatures.btcassessors.com
+url: https://www.davidlj95.com/mailsignatures
 title: BTC Assessors | Email signatures
 domain: btcassessors.com
 email: info@BTCAssessors.com
