--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-google-auth = "*"
-google-auth-httplib2 = "*"
 google-api-python-client = "*"
+google-auth = "*"
+google-auth-oauthlib = "*"
 Jinja2 = "*"
 
 [requires]
