--- a/_config.yml
+++ b/_config.yml
@@ -2,19 +2,19 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: https://www.davidlj95.com/mailsignatures
+url: https://btcassessors.github.io/email-signatures
 title: BTC Assessors | Email signatures
 domain: btcassessors.com
 email: info@BTCAssessors.com
 email_name: BTC%20Assessors
 email_subject: BTC%20Assessors%20|%20Website
-author: davidlj95
+author: ccebrecos & davidlj95
 description: >
   BTC Assessors email signatures site
 copyright: 'Copyright &copy; 2018 BTC Assessors. All Rights Reserved.'
 credits: > # "Credits
-  Credits: <a href="https://github.com/davidlj95" target="_blank">davidlj95</a>
-repository: ccebrecos/btca-mailsignatures
+  Credits: <a href="https://github.com/ccebrecos" target="_blank">ccebrecos</a> & <a href="https://github.com/davidlj95" target="_blank">davidlj95</a> 
+repository: btcassessors/email-signatures
 
 # ----------------------- #
 #    Jekyll & Plugins     #
